--- a/_examples/structuring/bootstrap/views/shared/layout.html
+++ b/_examples/structuring/bootstrap/views/shared/layout.html
@@ -11,11 +11,12 @@
 
 <body>
     <div>
+        <!-- 在此处渲染当前模板 -->
         <!-- Render the current template here -->
         {{ yield }}
         <hr />
         <footer>
-            <p>&copy; 2017 - {{.AppOwner}}</p>
+            <p>&copy; 2020 - {{.AppOwner}}</p>
         </footer>
     </div>
 </body>
