--- a/_examples/view/template_html_4/templates/page.html
+++ b/_examples/view/template_html_4/templates/page.html
@@ -1,3 +1,6 @@
+<!--  普通命名路由和动态子域命名路由之间的唯一区别是url的第一个参数
+是子域部分，而不是命名参数 -->
+
 <!-- the only difference between normal named routes and dynamic subdomains named routes is that the first argument of  url
 is the subdomain part instead of named parameter-->
 
