--- a/_examples/view/embedding-templates-into-app/templates/layouts/layout.html
+++ b/_examples/view/embedding-templates-into-app/templates/layouts/layout.html
@@ -6,6 +6,7 @@
 <body>
 	<h1>This is the global layout</h1>
 	<br />
+	<!-- 在此处渲染当前模板-->
 	<!-- Render the current template here -->
 	{{ yield }}
 </body>
