--- a/_examples/view/embedding-templates-into-app/templates/layouts/mylayout.html
+++ b/_examples/view/embedding-templates-into-app/templates/layouts/mylayout.html
@@ -6,6 +6,7 @@
 <body>
 	<h1>This is the layout for the /my/ and /my/other routes only</h1>
 	<br />
+	<!-- 在此处渲染当前模板 -->
 	<!-- Render the current template here -->
 	{{ yield }}
 </body>
